--- a/receiver.html
+++ b/receiver.html
@@ -14,11 +14,15 @@
 
 		<!-- Cast Debug Logger -->
 		<script src="//www.gstatic.com/cast/sdk/libs/devtools/debug_layer/caf_receiver_logger.js"></script>
-		<script type="module" crossorigin src="/timer/assets/admin-CJStm940.js"></script>
-		<link rel="modulepreload" crossorigin href="/timer/assets/ChromeCastReceiverRoute-DXiaWdkz.js">
-		<link rel="stylesheet" crossorigin href="/timer/assets/ChromeCastReceiverRoute-CHdXxjK8.css">
 	</head>
 	<body>
+		Loading receiver app...
 		<div id="root"></div>
+		<!-- <script type="module" src="/src/main-receiver.tsx"></script> -->
+
+		<script>
+			const context = cast.framework.CastReceiverContext.getInstance();
+			context.start();
+		</script>
 	</body>
 </html>
